--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,8 +39,7 @@
                   <%= link_to "投稿フォーム", new_post_image_path %>
                 </li>
                 <li class="">
-                  <!--以下のコードは５章で修正-->
-                  <%= link_to "マイページ", "#" %>
+                  <%= link_to "マイページ", user_path(current_user.id) %>
                 </li>
               <% else %>
                 <li class="">
